@@ -40,6 +40,26 @@ begin_import
 import|import
 name|java
 operator|.
+name|io
+operator|.
+name|IOException
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|io
+operator|.
+name|InputStream
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
 name|net
 operator|.
 name|MalformedURLException
@@ -93,6 +113,16 @@ operator|.
 name|util
 operator|.
 name|List
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Properties
 import|;
 end_import
 
@@ -173,34 +203,30 @@ extends|extends
 name|URLClassLoader
 block|{
 comment|/**    * Default value of the system classes if the user did not override them.    * JDK classes, hadoop classes and resources, and some select third-party    * classes are considered system classes, and are not loaded by the    * application classloader.    */
-DECL|field|DEFAULT_SYSTEM_CLASSES
+DECL|field|SYSTEM_CLASSES_DEFAULT
 specifier|public
 specifier|static
 specifier|final
 name|String
-name|DEFAULT_SYSTEM_CLASSES
+name|SYSTEM_CLASSES_DEFAULT
+decl_stmt|;
+DECL|field|PROPERTIES_FILE
+specifier|private
+specifier|static
+specifier|final
+name|String
+name|PROPERTIES_FILE
 init|=
-literal|"java.,"
-operator|+
-literal|"javax.,"
-operator|+
-literal|"org.w3c.dom.,"
-operator|+
-literal|"org.xml.sax.,"
-operator|+
-literal|"org.apache.commons.logging.,"
-operator|+
-literal|"org.apache.log4j.,"
-operator|+
-literal|"org.apache.hadoop.,"
-operator|+
-literal|"core-default.xml,"
-operator|+
-literal|"hdfs-default.xml,"
-operator|+
-literal|"mapred-default.xml,"
-operator|+
-literal|"yarn-default.xml"
+literal|"org.apache.hadoop.application-classloader.properties"
+decl_stmt|;
+DECL|field|SYSTEM_CLASSES_DEFAULT_KEY
+specifier|private
+specifier|static
+specifier|final
+name|String
+name|SYSTEM_CLASSES_DEFAULT_KEY
+init|=
+literal|"system.classes.default"
 decl_stmt|;
 DECL|field|LOG
 specifier|private
@@ -263,6 +289,112 @@ return|;
 block|}
 block|}
 decl_stmt|;
+static|static
+block|{
+name|InputStream
+name|is
+init|=
+literal|null
+decl_stmt|;
+try|try
+block|{
+name|is
+operator|=
+name|ApplicationClassLoader
+operator|.
+name|class
+operator|.
+name|getClassLoader
+argument_list|()
+operator|.
+name|getResourceAsStream
+argument_list|(
+name|PROPERTIES_FILE
+argument_list|)
+expr_stmt|;
+if|if
+condition|(
+name|is
+operator|==
+literal|null
+condition|)
+block|{
+throw|throw
+operator|new
+name|ExceptionInInitializerError
+argument_list|(
+literal|"properties file "
+operator|+
+name|PROPERTIES_FILE
+operator|+
+literal|" is not found"
+argument_list|)
+throw|;
+block|}
+name|Properties
+name|props
+init|=
+operator|new
+name|Properties
+argument_list|()
+decl_stmt|;
+name|props
+operator|.
+name|load
+argument_list|(
+name|is
+argument_list|)
+expr_stmt|;
+comment|// get the system classes default
+name|String
+name|systemClassesDefault
+init|=
+name|props
+operator|.
+name|getProperty
+argument_list|(
+name|SYSTEM_CLASSES_DEFAULT_KEY
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|systemClassesDefault
+operator|==
+literal|null
+condition|)
+block|{
+throw|throw
+operator|new
+name|ExceptionInInitializerError
+argument_list|(
+literal|"property "
+operator|+
+name|SYSTEM_CLASSES_DEFAULT_KEY
+operator|+
+literal|" is not found"
+argument_list|)
+throw|;
+block|}
+name|SYSTEM_CLASSES_DEFAULT
+operator|=
+name|systemClassesDefault
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|IOException
+name|e
+parameter_list|)
+block|{
+throw|throw
+operator|new
+name|ExceptionInInitializerError
+argument_list|(
+name|e
+argument_list|)
+throw|;
+block|}
+block|}
 DECL|field|parent
 specifier|private
 specifier|final
@@ -380,7 +512,7 @@ name|StringUtils
 operator|.
 name|getTrimmedStrings
 argument_list|(
-name|DEFAULT_SYSTEM_CLASSES
+name|SYSTEM_CLASSES_DEFAULT
 argument_list|)
 argument_list|)
 else|:
